0.3.5.19
  - (zathor) [Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155

0.3.5.18
  - (zathor) [OneClick] fixed "and open next" checkbox which did not always open the file dialogue. Bug #3089165
  - (zathor) [MKV Muxer] fixed rare "error parsing idx file" message
  - (zathor) [MKV Muxer] "default stream" checkbox is enabled by default for the first subtitle stream

0.3.5.17
  - (zathor) [OneClick] some dga demuxed audio files were not deleted during cleanup
  - (zathor) [MKV Muxer] changed default track flag of subtitles to no. Feature request #3086194
  - (zathor) [MKV Muxer] added option to set the default subtitle track
  - (zathor) [MKV Muxer] added option to set a subtitle delay. Feature request #3088742
  - (zathor) [AutoEncode] added option to always mux the video encoding (enabled by default). Feature request #3082125

0.3.5.16
  - (kurtnoise) add FLAC files support in the Matroska Muxer
  - (sharktooth) [x264] fixed unselectable CABAC option in Main and High profiles
  - (zathor) [MP4 Muxer] fixed temp directory handling
  - (zathor) [MKV Muxer] enhanced error handling
  - (zathor) [Log] added a context menu item to remove the overlay icon in case of an error
  - (zathor) [OneClick] fixed detection of some demuxed audio files. Bug #3085510

0.3.5.15
  - (zathor) fixed status overlay icon not showing up
  - (zathor) [VideoPlayer] fixed playing last frame. Bug #3072660

0.3.5.14
  - (zathor) fixed AR chooser displaying always 16:9 PAL e.g. in VideoPlayer or AVS Script Creator
  - (zathor) fixed saving of custom quantizer matrices in x264/xvid profiles. Bug #3070834

0.3.5.13
  - (sharktooth) [x264Encoder] Removed unnecessary/wrong code
  - (sharktooth) [x264] Fixed commandline generation when switching between AVC profiles
  - (sharktooth) [x264] Removed touhou tuning option
  - (sharktooth) [x264] Fix commandline generation with tunings