@@ -29,7 +29,6 @@ namespace MeGUI
         private void InitializeComponent()
         {
             this.AutomaticEncodingGroup = new System.Windows.Forms.GroupBox();
-            this.fileSize = new MeGUI.core.gui.TargetSizeSCBox();
             this.noTargetRadio = new System.Windows.Forms.RadioButton();
             this.averageBitrateRadio = new System.Windows.Forms.RadioButton();
             this.FileSizeRadio = new System.Windows.Forms.RadioButton();
@@ -39,10 +38,13 @@ namespace MeGUI
             this.saveButton = new System.Windows.Forms.Button();
             this.OutputGroupBox = new System.Windows.Forms.GroupBox();
             this.label1 = new System.Windows.Forms.Label();
-            this.splitSize = new MeGUI.core.gui.TargetSizeSCBox();
             this.container = new System.Windows.Forms.ComboBox();
             this.containerLabel = new System.Windows.Forms.Label();
             this.addSubsNChapters = new System.Windows.Forms.CheckBox();
+            this.device = new System.Windows.Forms.ComboBox();
+            this.DeviceLabel = new System.Windows.Forms.Label();
+            this.splitSize = new MeGUI.core.gui.TargetSizeSCBox();
+            this.fileSize = new MeGUI.core.gui.TargetSizeSCBox();
             this.AutomaticEncodingGroup.SuspendLayout();
             this.OutputGroupBox.SuspendLayout();
             this.SuspendLayout();
@@ -55,24 +57,12 @@ namespace MeGUI
             this.AutomaticEncodingGroup.Controls.Add(this.FileSizeRadio);
             this.AutomaticEncodingGroup.Controls.Add(this.projectedBitrateKBits);
             this.AutomaticEncodingGroup.Controls.Add(this.AverageBitrateLabel);
-            this.AutomaticEncodingGroup.Location = new System.Drawing.Point(3, 80);
+            this.AutomaticEncodingGroup.Location = new System.Drawing.Point(3, 103);
             this.AutomaticEncodingGroup.Name = "AutomaticEncodingGroup";
             this.AutomaticEncodingGroup.Size = new System.Drawing.Size(424, 104);
             this.AutomaticEncodingGroup.TabIndex = 18;
             this.AutomaticEncodingGroup.TabStop = false;
             this.AutomaticEncodingGroup.Text = "Size and Bitrate";
-            // 
-            // fileSize
-            // 
-            this.fileSize.Location = new System.Drawing.Point(118, 12);
-            this.fileSize.MaximumSize = new System.Drawing.Size(1000, 29);
-            this.fileSize.MinimumSize = new System.Drawing.Size(64, 29);
-            this.fileSize.Name = "fileSize";
-            this.fileSize.NullString = null;
-            this.fileSize.SelectedIndex = -1;
-            this.fileSize.SelectedItem = null;
-            this.fileSize.Size = new System.Drawing.Size(208, 29);
-            this.fileSize.TabIndex = 23;
             // 
             // noTargetRadio
             // 
@@ -89,7 +79,7 @@ namespace MeGUI
             // 
             this.averageBitrateRadio.Location = new System.Drawing.Point(16, 47);
             this.averageBitrateRadio.Name = "averageBitrateRadio";
-            this.averageBitrateRadio.Size = new System.Drawing.Size(100, 18);
+            this.averageBitrateRadio.Size = new System.Drawing.Size(79, 18);
             this.averageBitrateRadio.TabIndex = 16;
             this.averageBitrateRadio.Text = "Average Bitrate";
             this.averageBitrateRadio.CheckedChanged += new System.EventHandler(this.FileSizeRadio_CheckedChanged);
@@ -108,7 +98,7 @@ namespace MeGUI
             // projectedBitrateKBits
             // 
             this.projectedBitrateKBits.Enabled = false;
-            this.projectedBitrateKBits.Location = new System.Drawing.Point(118, 44);
+            this.projectedBitrateKBits.Location = new System.Drawing.Point(101, 44);
             this.projectedBitrateKBits.Name = "projectedBitrateKBits";
             this.projectedBitrateKBits.Size = new System.Drawing.Size(64, 21);
             this.projectedBitrateKBits.TabIndex = 9;
@@ -116,7 +106,7 @@ namespace MeGUI
             // 
             // AverageBitrateLabel
             // 
-            this.AverageBitrateLabel.Location = new System.Drawing.Point(187, 47);
+            this.AverageBitrateLabel.Location = new System.Drawing.Point(171, 47);
             this.AverageBitrateLabel.Name = "AverageBitrateLabel";
             this.AverageBitrateLabel.Size = new System.Drawing.Size(37, 23);
             this.AverageBitrateLabel.TabIndex = 10;
@@ -126,7 +116,7 @@ namespace MeGUI
             // 
             this.cancelButton.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
             this.cancelButton.DialogResult = System.Windows.Forms.DialogResult.Cancel;
-            this.cancelButton.Location = new System.Drawing.Point(379, 188);
+            this.cancelButton.Location = new System.Drawing.Point(379, 215);
             this.cancelButton.Name = "cancelButton";
             this.cancelButton.Size = new System.Drawing.Size(48, 23);
             this.cancelButton.TabIndex = 20;
@@ -136,7 +126,7 @@ namespace MeGUI
             // 
             this.saveButton.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
             this.saveButton.DialogResult = System.Windows.Forms.DialogResult.OK;
-            this.saveButton.Location = new System.Drawing.Point(311, 188);
+            this.saveButton.Location = new System.Drawing.Point(311, 215);
             this.saveButton.Name = "saveButton";
             this.saveButton.Size = new System.Drawing.Size(48, 23);
             this.saveButton.TabIndex = 19;
@@ -144,13 +134,15 @@ namespace MeGUI
             // 
             // OutputGroupBox
             // 
+            this.OutputGroupBox.Controls.Add(this.DeviceLabel);
+            this.OutputGroupBox.Controls.Add(this.device);
             this.OutputGroupBox.Controls.Add(this.label1);
             this.OutputGroupBox.Controls.Add(this.splitSize);
             this.OutputGroupBox.Controls.Add(this.container);
             this.OutputGroupBox.Controls.Add(this.containerLabel);
             this.OutputGroupBox.Location = new System.Drawing.Point(3, 12);
             this.OutputGroupBox.Name = "OutputGroupBox";
-            this.OutputGroupBox.Size = new System.Drawing.Size(424, 62);
+            this.OutputGroupBox.Size = new System.Drawing.Size(424, 85);
             this.OutputGroupBox.TabIndex = 21;
             this.OutputGroupBox.TabStop = false;
             this.OutputGroupBox.Text = "Output Options";
@@ -158,32 +150,21 @@ namespace MeGUI
             // label1
             // 
             this.label1.AutoSize = true;
-            this.label1.Location = new System.Drawing.Point(215, 28);
+            this.label1.Location = new System.Drawing.Point(215, 27);
             this.label1.Name = "label1";
             this.label1.Size = new System.Drawing.Size(49, 13);
             this.label1.TabIndex = 27;
             this.label1.Text = "Splitting:";
             // 
-            // splitSize
-            // 
-            this.splitSize.CustomSizes = new MeGUI.core.util.FileSize[0];
-            this.splitSize.Location = new System.Drawing.Point(270, 20);
-            this.splitSize.MaximumSize = new System.Drawing.Size(1000, 29);
-            this.splitSize.MinimumSize = new System.Drawing.Size(64, 29);
-            this.splitSize.Name = "splitSize";
-            this.splitSize.NullString = "No splitting";
-            this.splitSize.SelectedIndex = 0;
-            this.splitSize.Size = new System.Drawing.Size(136, 29);
-            this.splitSize.TabIndex = 26;
-            // 
             // container
             // 
             this.container.DropDownStyle = System.Windows.Forms.ComboBoxStyle.DropDownList;
             this.container.FormattingEnabled = true;
-            this.container.Location = new System.Drawing.Point(128, 24);
+            this.container.Location = new System.Drawing.Point(101, 24);
             this.container.Name = "container";
-            this.container.Size = new System.Drawing.Size(64, 21);
+            this.container.Size = new System.Drawing.Size(85, 21);
             this.container.TabIndex = 25;
+            this.container.SelectedIndexChanged += new System.EventHandler(this.container_SelectedIndexChanged);
             // 
             // containerLabel
             // 
@@ -196,18 +177,62 @@ namespace MeGUI
             // 
             // addSubsNChapters
             // 
-            this.addSubsNChapters.Location = new System.Drawing.Point(12, 187);
+            this.addSubsNChapters.Location = new System.Drawing.Point(19, 215);
             this.addSubsNChapters.Name = "addSubsNChapters";
             this.addSubsNChapters.Size = new System.Drawing.Size(256, 24);
             this.addSubsNChapters.TabIndex = 22;
             this.addSubsNChapters.Text = "Add additional content (audio, subs, chapters)";
+            // 
+            // device
+            // 
+            this.device.DropDownStyle = System.Windows.Forms.ComboBoxStyle.DropDownList;
+            this.device.FormattingEnabled = true;
+            this.device.Items.AddRange(new object[] {
+            "Standard"});
+            this.device.Location = new System.Drawing.Point(101, 51);
+            this.device.Name = "device";
+            this.device.Size = new System.Drawing.Size(85, 21);
+            this.device.TabIndex = 39;
+            // 
+            // DeviceLabel
+            // 
+            this.DeviceLabel.AutoSize = true;
+            this.DeviceLabel.Location = new System.Drawing.Point(16, 54);
+            this.DeviceLabel.Name = "DeviceLabel";
+            this.DeviceLabel.Size = new System.Drawing.Size(39, 13);
+            this.DeviceLabel.TabIndex = 40;
+            this.DeviceLabel.Text = "Device";
+            // 
+            // splitSize
+            // 
+            this.splitSize.CustomSizes = new MeGUI.core.util.FileSize[0];
+            this.splitSize.Location = new System.Drawing.Point(270, 20);
+            this.splitSize.MaximumSize = new System.Drawing.Size(1000, 29);
+            this.splitSize.MinimumSize = new System.Drawing.Size(64, 29);
+            this.splitSize.Name = "splitSize";
+            this.splitSize.NullString = "No splitting";
+            this.splitSize.SelectedIndex = 0;
+            this.splitSize.Size = new System.Drawing.Size(148, 29);
+            this.splitSize.TabIndex = 26;
+            // 
+            // fileSize
+            // 
+            this.fileSize.CustomSizes = new MeGUI.core.util.FileSize[0];
+            this.fileSize.Location = new System.Drawing.Point(101, 12);
+            this.fileSize.MaximumSize = new System.Drawing.Size(1000, 29);
+            this.fileSize.MinimumSize = new System.Drawing.Size(64, 29);
+            this.fileSize.Name = "fileSize";
+            this.fileSize.NullString = null;
+            this.fileSize.SelectedIndex = 0;
+            this.fileSize.Size = new System.Drawing.Size(171, 29);
+            this.fileSize.TabIndex = 23;
             // 
             // AutoEncodeDefaults
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.CancelButton = this.cancelButton;
-            this.ClientSize = new System.Drawing.Size(433, 214);
+            this.ClientSize = new System.Drawing.Size(433, 241);
             this.Controls.Add(this.addSubsNChapters);
             this.Controls.Add(this.OutputGroupBox);
             this.Controls.Add(this.cancelButton);
@@ -246,5 +271,7 @@ namespace MeGUI
         private MeGUI.core.gui.TargetSizeSCBox fileSize;
         private MeGUI.core.gui.TargetSizeSCBox splitSize;
         private System.Windows.Forms.Label label1;
+        private System.Windows.Forms.ComboBox device;
+        private System.Windows.Forms.Label DeviceLabel;
     }
 }
