@@ -1,5 +1,6 @@
 0.3.5.19
   - (zathor) [Adaptive Muxer] resized window so that the buttons at the bottom are visible again. Bug #3090155
+  - (zathor) [AutoEncode] added saving of the default mp4 device type to the "Configure AutoEncode defaults" in the settings
 
 0.3.5.18
   - (zathor) [OneClick] fixed "and open next" checkbox which did not always open the file dialogue. Bug #3089165
